<resources>
    <string name="app_name">BottomNavigationApp</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_bag">Корзина</string>
    <string name="title_profile">Профиль</string>
    <string name="title_authorization">Вход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>